@@ -2,6 +2,10 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2021 Antti Ajanki
 Distributed under the GPL v3
 
+<unreleased>
+
+- Fixed the support for yle.fi/uutiset videos
+
 Version 20210212
 
 - Partially fixed a problem downloading radio programs on Mac OS X:
